# GPR-U-Net-with-XAI

./: .gitignore  MLproject  Makefile  README.md  dev-requirements.txt  pyproject.toml  requirements.txt
.dvc/: config
data/: auxiliary_functions.py  feature_engineering.py  load_data.py  process_data.py  sample.py  segregate.py  utils.py
data/processed/: .gitignore  dataset_description.txt  x_test.npy.dvc  x_test_section_89.npy.dvc  x_test_section_96.npy.dvc  x_train.npy.dvc  x_val.npy.dvc  y_test.npy.dvc  y_test_section_89.npy.dvc  y_test_section_96.npy.dvc  y_train.npy.dvc  y_val.npy.dvc  yj_transformer_list.pkl.dvc
gpr_unet/: data_augmentation.py  explain.py  load_data.py  model.py  sample.py  utils.py
mlruns/1/: meta.yaml
mlruns/2/: meta.yaml
model/: build_model.py  train.py
model/models/: model_5x5_8filters_complete_description.txt  model_5x5_8filters_complete_history.pkl  model_5x5_8filters_only_0_description.txt  model_5x5_8filters_only_0_history.pkl  model_5x5_8filters_only_1_description.txt  model_5x5_8filters_only_1_history.pkl  model_5x5_8filters_only_2_description.txt  model_5x5_8filters_only_2_history.pkl  model_5x5_8filters_only_3_description.txt  model_5x5_8filters_only_3_history.pkl  model_5x5_8filters_only_4_description.txt  model_5x5_8filters_only_4_history.pkl  model_5x5_8filters_only_5_description.txt  model_5x5_8filters_only_5_history.pkl
notebooks/: 0 - Synthetic Data.ipynb  4 - Attributes figures.ipynb
notebooks/.ipynb_checkpoints/: 1 - Locating Areas to Explain-checkpoint.ipynb  2 - SHAP values-checkpoint.ipynb  3 - Training History-checkpoint.ipynb
pipeline/: MLproject  augment.py  config.yaml  process_data.py  sample_data.py  train.py  transform.py
pipeline/raw_data/: .gitignore  attributes.dvc
pipeline_synthetic/: MLproject  augment.py  config.yaml  feature_engineering.py  process_data.py  sample_data.py  segregate.py  train.py  transform.py
(+1293 files in other folders)
