[tool.poetry]
name = "gpr-u-net-with-xai"
version = "0.1.0"
description = ""
authors = ["marcos <marcos.gomesjacinto@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8.13,<3.10"
shap = "^0.40.0"
tensorflow = "^2.8.0"
mlflow = "^1.24.0"
segyio = "^1.9.9"
scikit-image = "^0.19.2"

[tool.poetry.dev-dependencies]
mccabe = "^0.7.0"
pydocstyle = "^6.1.1"
isort = "^5.10.1"
pycodestyle = "^2.8.0"
jupyterlab = "^3.3.2"
black = "^22.3.0"
mypy = "^0.942"
matplotlib = "^3.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
