[tool.poetry]
name = "gpr_unet"
version = "0.1.0"
description = ""
authors = ["marcos <marcos.gomesjacinto@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7.13,<3.10"
shap = "^0.40.0"
mlflow = "^1.24.0"
segyio = "^1.9.9"
scikit-image = "^0.19.2"
hydra-core = "^1.1.2"
tensorflow = "2.7.0"

[tool.poetry.dev-dependencies]
pydocstyle = "^6.1.1"
isort = "^5.10.1"
pycodestyle = "^2.8.0"
jupyterlab = "^3.3.2"
black = "^22.3.0"
mypy = "^0.942"
matplotlib = "^3.5.1"
prospector = "^1.7.7"
dvc = {extras = ["gdrive"], version = "^2.10.1"}
jupyter-http-over-ws = "^0.0.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
