[tool.poetry]
name = "gpr_unet"
version = "0.1.0"
description = ""
authors = ["marcos <marcos.gomesjacinto@gmail.com>"]

[tool.poetry.dependencies]
python = "==3.7.13"
tensorflow = "2.3.0"
shap = "^0.40.0"
mlflow = "^1.25.1"
segyio = "^1.9.9"
scikit-image = "^0.19.2"
hydra-core = "^1.1.2"
dvc = {extras = ["gdrive"], version = "^2.10.2"}

[tool.poetry.dev-dependencies]
jupyterlab = "^3.4.0"
black = "^22.3.0"
matplotlib = "^3.5.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
